# kayak-travel-system

./: .dockerignore  .gitignore  BACKEND_SERVICES.md  GIT_SETUP.md  PROJECT_STATUS.md  README.md  SETUP.md  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  start-all.ps1  start-all.sh
ai-agent/: .env.example  Dockerfile  design.md  pyproject.toml  requirements.txt
ai-agent/app/: config.py  database.py  finetuned.py  ingest.py  main.py  models.py  rag.py  ranking.py  tools.py
ai-agent/tests/: test_endpoints.py
backend/: Dockerfile  README.md  package-lock.json  package.json
backend/api-gateway/src/: server.js
backend/services/admin-service/: .gitignore  env.example  package.json  test-connections.js
backend/services/billing-service/: package.json
backend/services/car-service/: package.json
backend/services/flight-service/: package.json
backend/services/hotel-service/: package.json
backend/services/reviews-service/: package.json
backend/services/user-service/: .gitignore  package.json
database/seeds/: create-admin.js  generate-data.js  seed-minimal.js
docs/: architecture.md
frontend/: Dockerfile  package.json
frontend/src/: App.jsx
frontend/src/components/: BookingCard.jsx  BookingModal.jsx  CarReviewsModal.jsx  ChartComponents.jsx  Chatbot.jsx  DealsSection.jsx  (+8 more)
jmeter/: KAYAK_PERFORMANCE_TEST_PLAN.jmx  PERFORMANCE_TEST_RESULTS.md
kafka/: monitor-bookings.js
kafka/config/: kafka.config.js
notebooks/: finetune_travel_qlora.ipynb
scripts/: create-kafka-topics.js  seed-all.sh  seed-mongo.js  seed-redis.js
(+76 files in other folders)
